# payment_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_users_balance_held.py  0003_tasks_rename_charged_amount.py  001_initial_schema.py
backend/: __init__.py  config.py  globals.py  main.py
backend/api/: __init__.py  auth.py  dependencies.py  main.py  middleware.py
backend/api/routers/: __init__.py  balance.py  batches.py  health.py  media.py  payments.py  tasks.py  users.py  webhooks.py
backend/api/schemas/: __init__.py  batches.py  tasks.py  users.py
backend/config/: pricing_table.yaml  tier_platform_catalog.yaml  workflow_recipes.yaml
backend/database/: session.py
backend/database/models/: __init__.py  balance_transaction.py  base.py  batch_item.py  batch_job.py  payment.py  task.py  task_balance_hold.py  user.py
backend/database/repositories/: __init__.py  balance_transaction_repository.py  base_repository.py  batch_repository.py  payment_repository.py  task_balance_hold_repository.py  task_repository.py  user_repository.py
backend/domain/: __init__.py  balance_transaction_types.py  batch_enums.py  task_enums.py  task_prompts.py
backend/payments/: __init__.py  alipay.py  base.py  callbacks.py  plisio.py  plisio_poll.py  trc20_monitor.py  trc20_usdt.py  wechat.py
backend/services/: __init__.py  balance_service.py  base_service.py  batch_archives.py  batch_service.py  payment_service.py  task_pricing.py  task_service.py  user_service.py
backend/storage/: __init__.py  local.py
backend/utils/: payment_utils.py
backend/workers/: __init__.py  batch_results.py  celery_app.py  celery_tasks.py  compute_enqueue.py  compute_runner.py  poll_tasks.py  query_snapshot.py  recipe.py  rh_pipeline.py  slot_limiter.py  task_settlement.py  telegram_notify.py
common/: compute_catalog.py  logger.py  storage.py  task_refs.py  task_results.py
documents/: 01-PRD.md  02-ARCHITECTURE.md  03-PROJECT.md  04-BUSINESS-DESIGN.md  API.md  DEPLOYMENT.md
documents/issue/: issue1-create-backend.md  issue2-create-telegram-bot.md
frontend/: __init__.py  runner.py
frontend/bot/: bot.py  dashboard_view.py  keyboards.py  navigation.py
frontend/bot/handlers/: balance.py  batch.py  history.py  language.py  recharge.py  remove_watermark.py  start.py  task_history.py
frontend/bot/handlers/compute/: __init__.py  create_flow.py  task_status.py
frontend/core/: base_bot.py  bot_settings.py  i18n.py  utils.py
frontend/integrations/: __init__.py  backend_client.py  backend_errors.py  settings.py
frontend/locales/en/: messages.json
frontend/locales/zh_hans/: messages.json
frontend/locales/zh_hant/: messages.json
frontend/payment_bot/: bot.py
frontend/payment_bot/handlers/: balance.py  history.py  language.py  recharge.py  start.py
frontend/shared/: error_handler.py
scripts/: check_frontend_zero_db.sh  cleanup_uploads.py  smoke_universal_edit_runninghub.py
tests/: conftest.py  test_payments_router.py  test_trc20_monitor.py  test_trc20_usdt.py  test_utils.py
tests/backend/: test_auth.py  test_balance_service_summary.py  test_batch_archives.py  test_batch_packaging.py  test_batch_service.py  test_batches_router.py  test_compute_catalog.py  test_compute_enqueue.py  test_compute_runner.py  test_local_storage.py  test_media_router.py  test_payment_crypto.py  test_payment_service_confirm.py  test_payments_trc20_create.py  test_plisio_poll.py  test_plisio_provider.py  test_poll_terminal.py  test_recipe.py  test_rh_pipeline.py  test_runninghub_client.py  test_slot_limiter.py  test_task_pricing.py  test_task_results.py  test_task_settlement.py  test_tasks_router.py  test_telegram_notify.py  test_trc20_monitor.py  test_user_service_balance.py  test_users_zero_db_api.py  test_webhook.py
tests/frontend/: conftest.py  test_backend_client.py  test_batch_flow.py  test_bot_commands.py  test_compute_flow.py  test_dashboard.py  test_frontend_zero_db_imports.py  test_i18n.py  test_recharge_flow.py  test_remove_watermark_flow.py
